--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.3.5",
+    "jotai": "^1.7.2",
+    "lexical": "^0.3.5",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.9.1",
+    "regenerator-runtime": "^0.13.9",
+    "voice-activity-detection": "^0.0.5"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-speech-recognition": "^3.9.0",
+    "@types/voice-activity-detection": "^0.0.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
 }
