--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-speech-recognition": "^3.9.1",
-    "regenerator-runtime": "^0.13.9",
-    "voice-activity-detection": "^0.0.5"
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-speech-recognition": "^3.9.0",
-    "@types/voice-activity-detection": "^0.0.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
