--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-speech-recognition": "^3.9.1",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "vosk-browser": "^0.0.7"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
