--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jotai": "^1.7.2",
     "lexical": "^0.3.5",
     "next": "12.1.6",
+    "next-useragent": "^2.8.0",
     "node-wit": "^6.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
